@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-08T16:17:36Z",
+  "timestamp" : "2022-05-09T01:05:17Z",
   "count_outdated" : 16,
   "uniques_outdated" : 10,
-  "count" : 81,
-  "uniques" : 49,
+  "count" : 82,
+  "uniques" : 50,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -49,10 +49,10 @@
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 22,
-      "count_minmax": [ 17, 22 ],
-      "uniques": 10,
-      "uniques_minmax": [ 8, 10 ]
+      "count": 23,
+      "count_minmax": [ 17, 23 ],
+      "uniques": 11,
+      "uniques_minmax": [ 8, 11 ]
     }
   ]
 }
