@@ -1,5 +1,5 @@
 {
-  "count": 65,
+  "count": 66,
   "uniques": 17,
   "clones": [
     {
@@ -34,8 +34,8 @@
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 22,
-      "uniques": 10
+      "count": 23,
+      "uniques": 11
     }
   ]
 }
